<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="avatar_description">avatar_description</string>
    <string name="post_author">Нетология.Университет интернет-технологий</string>
    <string name="date_string">06.07.2022</string>
    <string name="like_count">like_count</string>
    <string name="share">share</string>
    <string name="menu">menu</string>
    <string name="eye_button">eye_button</string>
    <string name="likeCount">999</string>
    <string name="description_viewing" />
    <string name="description_repost" />
    <string name="description_likes" />
    <string name="description_post_menu" />
    <string name="description_post_author_avatar" translatable="false" />
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="description_post_like">Like</string>
    <string name="post_text">Post text</string>
    <string name="error_empty_content">"Content can't be empty"</string>
</resources>