<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/avatar_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/author_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:ellipsize="end"
        android:padding="1dp"
        android:singleLine="true"
        android:text="@string/post_author"
        app:layout_constraintBottom_toTopOf="@id/date"
        app:layout_constraintEnd_toEndOf="@id/options"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:padding="2dp"
        android:singleLine="true"
        android:text="@string/date_string"
        app:layout_constraintBottom_toBottomOf="@id/author_name"
        app:layout_constraintEnd_toEndOf="@id/author_name"
        app:layout_constraintStart_toStartOf="@id/author_name"
        app:layout_constraintTop_toBottomOf="@id/author_name" />

    <ImageButton
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:src="@drawable/ic_options_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/menu" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,date,options"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/post_text"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/headerBarrier"
        tools:text="@tools:sample/lorem/random" />

    <ImageButton
        android:id="@+id/like_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_outline_favorite_border_24"
        android:background="#00000000"
        app:layout_constraintTop_toBottomOf="@id/post_text"
        android:contentDescription="@string/like_count" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/like_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/like_button"
        app:layout_constraintTop_toBottomOf="@id/post_text"
        tools:text="10"
        />

    <ImageButton
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_share_24"
        android:background="#00000000"
        app:layout_constraintStart_toEndOf="@id/like_text"
        app:layout_constraintTop_toBottomOf="@id/post_text"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/share"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/share_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/share_button"
        app:layout_constraintTop_toBottomOf="@id/post_text"
        tools:text="5"
        />

    <ImageButton
        android:id="@+id/post_views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:contentDescription="@string/eye_button"
        android:src="@drawable/ic_baseline_remove_red_eye_24"
        app:layout_constraintEnd_toEndOf="@id/eye_text"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/post_text"

        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/eye_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/post_views"
        app:layout_constraintTop_toBottomOf="@id/post_text"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="15" />

</androidx.constraintlayout.widget.ConstraintLayout>